--- a/SiMP3/Views/Mobile/PlaylistEditorView.xaml
+++ b/SiMP3/Views/Mobile/PlaylistEditorView.xaml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
-    x:Class="SiMP3.Views.PlaylistEditorPage"
+<ContentView
+    x:Class="SiMP3.Views.Mobile.PlaylistEditorView"
     x:Name="PlaylistEditor"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:models="clr-namespace:SiMP3.Models"
     BackgroundColor="#0A0A0A">
 
-<ContentPage.Resources>
+<ContentView.Resources>
         <ResourceDictionary>
             <Color x:Key="PageBackgroundColor">#0A0A0A</Color>
             <Color x:Key="SurfaceColor">#121216</Color>
@@ -103,7 +103,7 @@
                 </SwipeView>
             </DataTemplate>
         </ResourceDictionary>
-    </ContentPage.Resources>
+    </ContentView.Resources>
 
     <Grid RowSpacing="16" Padding="18" BackgroundColor="{StaticResource PageBackgroundColor}">
         <Grid.RowDefinitions>
@@ -171,9 +171,9 @@
             <CollectionView.ItemsLayout>
                 <LinearItemsLayout Orientation="Vertical" ItemSpacing="12" />
             </CollectionView.ItemsLayout>
-            
+
         </CollectionView>
-        
+
         <!-- Mini player -->
         <Grid Grid.Row="3" Padding="0,8,0,0">
             <Border
@@ -247,4 +247,4 @@
             </Grid.GestureRecognizers>
         </Grid>
     </Grid>
-</ContentPage>
+</ContentView>
